# switcher-client-py

./: .coveragerc  .gitignore  Makefile  Pipfile  README.md  pyproject.toml  sonar-project.properties
.devcontainer/: devcontainer.json  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: master.yml  publish-anaconda.yml  release-test-conda.yml  release-test.yml  release.yml  sonar.yml  staging.yml
conda.recipe/: meta.yaml
switcher_client/: __init__.py  client.py  context.py  switcher.py  switcher_data.py  testing.py
switcher_client/errors/: __init__.py
switcher_client/lib/: __init__.py  compat.py  remote.py  remote_auth.py  resolver.py  snapshot.py  snapshot_auto_updater.py  snapshot_loader.py  snapshot_watcher.py  types.py  utils.py
switcher_client/lib/bypasser/: __init__.py  bypasser.py  key.py
switcher_client/lib/globals/: __init__.py  global_auth.py  global_context.py  global_retry.py  global_snapshot.py
switcher_client/lib/utils/: __init__.py  date_moment.py  execution_logger.py  ipcidr.py  payload_reader.py
switcher_client/lib/utils/timed_match/: __init__.py  timed_match.py  worker.py
tests/: __init__.py  helpers.py  requirements.txt  test_client_check_switchers.py  test_client_context.py  test_client_load_snapshot_file.py  test_client_load_snapshot_remote.py  test_client_watch_snapshot.py  test_switcher_integration.py  test_switcher_local.py  test_switcher_logger.py  test_switcher_remote.py  test_switcher_silent_mode.py  test_switcher_stub.py  test_switcher_stub_decorator.py  test_switcher_throttle.py
tests/fixtures/: dummy_cert.pem
tests/playground/: index.py  util.py
tests/remote/: test_remote_auth.py
tests/snapshots/: default.json  default_disabled.json  default_load_2.json  default_malformed.json
tests/strategy-operations/: test_date.py  test_network.py  test_numeric.py  test_payload.py  test_regex.py  test_time.py  test_value.py
tests/utils/: test_date_moment.py  test_timed_match.py
