[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "switcher_client"
dynamic = ["version", "readme", "dependencies"]
authors = [{name='Roger Floriano (petruki)', email='switcher.project@gmail.com'}]
description = "Switcher Client SDK for Python"
license = { text = "MIT" }
classifiers = [
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
	"Programming Language :: Python :: Implementation :: CPython",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/switcherapi"

[tool.setuptools.packages.find]
include = ["switcher_client*"]

[tool.setuptools.dynamic]
version = { attr = "switcher_client.version.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }
dependencies = { file = ["requirements.txt"] }

[tool.pylint.main]
source-roots = ["switcher_client"]

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    # Relative imports are valid within the installed package; pylint reports
    # false positives when invoked from the project root without install.
    "relative-beyond-top-level"
]

[tool.pylint.format]
max-line-length = 120