[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "switcher_client"
description = "Switcher Client SDK for Python"
dynamic = ["version", "readme"]
dependencies = ["httpx[http2]>=0.28.1"]
authors = [{name='Roger Floriano (petruki)', email='switcher.project@gmail.com'}]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: Implementation :: CPython",
	"Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/switcherapi"
source = "https://github.com/switcherapi/switcher-client-py"
issue-tracker = "https://github.com/switcherapi/switcher-client-py/issues"
release-notes = "https://github.com/switcherapi/switcher-client-py/releases"

[tool.setuptools.packages.find]
include = ["switcher_client*"]

[tool.setuptools.dynamic]
version = { attr = "switcher_client.version.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.pylint.main]
source-roots = ["switcher_client"]

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "missing-module-docstring",
    "missing-function-docstring"
]

[tool.pylint.format]
max-line-length = 120